Monitor translation sources and preserve pack choices